refactor: small code style refactor